--- a/bachelor_thesis.tex
+++ b/bachelor_thesis.tex
@@ -138,8 +138,8 @@ morecomment=[s][\color{javadocblue}]{/**}{*/}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \input{contents/intro}
-%\input{contents/background}
-%\input{contents/related}
+\input{contents/background}
+\input{contents/related}
 \input{contents/algorithm}
 \input{contents/implementation}
 \input{contents/application}
