--- a/contents/ack.tex
+++ b/contents/ack.tex
@@ -1,20 +1,16 @@
 \chapter*{Acknowledgments}
-Foremost, I would like to express my great appreciate to my supervisor, Professor Hideyuki Tokuda, Professor Hideyuki Tokuda who gave me advice, guidance and encouragement from the beginning when I has just joined to Hide.Tokuda Laboratory.
 
-I would like to thank Professor Jun Murai, Osamu Nakamura and Kenji Takeda, Associate Professor Keisuke Uehara, Hiroyuki Kusumoto, Jin Mitsugi, Rodney D. Van Meter, and Kazuki Takashio, Assistant 
-Professors Massaki Sato, Noriyuki Shigechika and Jin Nakazawa as well.
+Foremost, I would like to express my sincere gratitude to my advisor Prof.Yasushi Kiyoki for the continuous support of my bachelor study and research, for his patience, motivation, enthusiasm, and immense knowledge since I joined Multimedia Database Laboratory. His guidance helped me in all the time of research and writing of this thesis. I could not have imagined having a better advisor and mentor for my bachelor.
 
-I am extremely thankful for Dr.Takuro Yonezawa, who has always supported and guided me when I has just joined to CPSF research group of Hide.Tokuda Laboratory. He also helped me analyze the meaning of my research, clarify my research goal and guided me to write technique papers.
+I would like to thank my advisor, Mrs.Nguyen Thi Ngoc Diep who has always taken care of me since I joined Multimedia Databse Laboratory. She gave me a lot of advice and support when I am not sure about my research motivations. 
 
-I would like to thank my advisor, Mr.Takuya Takimoto, who has always taken care of me since I joined Hide.Tokuda Laboratory. He gave me a lot of advice and support when I am not sure about my research motivations. I would like to thank Mr.Tomotaka Ito and Mr.Ogawa Masaki for a listening and giving me many useful discussion points and advices.
+I would like to thank Dr.Sashiori Sasaki and Mr.Jeremy as well for their encouragement, insightful comments, and hard questions\ldots
 
-I would like to thank members of CPSF research group in Hide.Tokuda Laboratory for their great friendship and support.
+I thank to the members of Multimedia Database Laboratory for their great friendship and supports.
 
-I would like to thank Mr.Tomotaka Ito, Mr.Ogawa Masaki, Ms.Vu Le Thao Chi, Ms.Nguyen Thi Ngoc Diep, my friend Ms.Vu Thi Thai Ha, Ms.Luu Thanh Huong, for their comments for the thesis structure and my English writings.
+I would like to thank to Mr.Burgin and Mr.Loyld for checking my English writings.
 
-I send my special thank to my experiment supporters: Takuya Takimoto, Yuuki Nishiyama, Teruaki Ishiguro, Hiroki Shoji, Yutaro Kyono, Nguyen Anh Tien, Do Trung Kien, Nguyen Tien Thanh, Tran Duc Thang Nguyen Thanh Tung, Nguyen Trung Duc, Tran Ngoc Anh and Dinh Hoang Long.
-
-And last but not least, I am heartily grateful to my family. This is the first time I have left my family to start a new life in Japan, many things happened, success and failure, sadness and happiness, tears and smiles. But they still and always are there, giving me strength to follow all goals of my life.
+Last but not the least, I would like to thank my family: my parents Nguyen Trung Dung and Bui Thi Thuy Lan, for giving birth to me at the first place and supporting me spiritually throughout my life. I am also grateful to my friends in Japan who have helped me a lot to start a new life in Japan. 
 
 \begin{flushright}
 \today
