--- a/contents/background.tex
+++ b/contents/background.tex
@@ -1,272 +1,24 @@
-\chapter{Problems of Deploying Secured Wireless Sensor Network }\label{chap:bg}
-In this chapter, we introduce background of WSN and setup problems in order to deploy a secured WSN. Firstly, we describe the background of WSN and nowadays Smartphone. In the next section, we describe about some secure protocol, which can be used in a secured WSN. We introduce some applications of WSN and requirements of it in next section. In section 4, we also describe about the principle of setup a secured WSN and difficult point when applied at home environment. Finally, we discuss some communication techniques.
+\chapter{TF-IDF method and }\label{chap:bg}
+In this chapter, we introduce background of TF-IDF method 
+
+The chapter is divided into three section. The first section we introduce about TF-IDF. The second section is about 
+
+The problems related to TF-IDF is introduce in the last section.
+
 \clearpage
-\section{Background}\label{sec:bg_bg}%Say about principle of WSN,..., properties of sensor nodes.(like kenz thesis)\
-In this section, we describe about hardware and properties of Sensor node and Smartphone.
+\section{Introduction about TF-IDF}\label{sec:bg_bg}
 
-\subsection{Sensor Nodes}
 
-In recent years, we have some advance in wireless technologies, sensor technologies and microprocessing technologies. We can make a smaller and cheaper wireless communication part, sensor component and micro processing. And we combined them to make wireless sensor node devices, which is tiny and light. Which also can measure environment condition, communicate with others sensor nodes, and exchange data with a computer. Examples are mote\cite{mote_sensor_node}, Sunspot\cite{sunspot_sensor_node} and upart\cite{upart_sensor_node} (Figure \ref{fig:sensor_nodes}). With a lot of sensor nodes, we can make some useful applications in home environment such as Smart home, Secure home, Remote Medication. But we also have a challenge to apply it at home, regular users need a method to setup WSN, configure new sensor nodes and modify sensor nodes friendly, easy, and fast. Unlike computer or Smartphone, sensor node do not have friendly input method, this makes it difficult for users to setup sensor nodes and deploy a secured WSN.
+\section{Problem related to TF-IDF}
 
-Table \ref{tab:sensornode_hardware} show that LED is common hardware of sensor nodes. We also have light sensor in some type of sensor nodes, another can use light sensor by only addition a sensor board. In addition, light sensor is used in a lot of applications such as environment monitoring, security system. Then we also can say that light sensor is a common hardware of sensor nodes.
 
-\begin{table}[htbp]
-\caption{Sensor Node's hardware status}
-\begin{center}
-\begin{minipage}{0.57\linewidth}
-\begin{tabular}{|c|c|c|c|}
-\hline
-Type & LED & light sensor & accelerometer \\
-\hline
-Mote & O\footnote{Build in} & A\footnote{Need an addition sensor board} & A \\
-\hline
-CSIRO Fleck& A & O & A\\
-\hline
-Tmote&  A & O & A\\
-\hline
-EYES& A & O & O\\
-\hline
-Sunspot& O &O& O \\
-\hline
-CPart& O &A	& A \\
-\hline
-uPart& O &O& O \\
-\hline
-BTnode& O &A& A \\
-\hline	
-PowWow& O &A& A \\
-\hline	
-Preon32& O &A& A \\
-\hline	
-Mulle& O &A& A \\
-\hline	
-Waspmote& O &A& A \\
-\hline	
-Zolertia& O &A& O	 \\
-\hline	
-iSense& O &A& A \\
-\hline			
-\end{tabular}
-\end{minipage}
-\end{center}
-\label{tab:sensornode_hardware}
-\end{table}%
+\section{Applications of TF-IDF}\label{sec:bg_appli}
 
-\begin{figure}[htbp]
-\begin{center}
-\subfigure[Mote \newline 58$mm$ x 32$mm$ x 7$mm$ \newline runs with two AA batteries] {\mbox {\raisebox{1mm} {\includegraphics[width=.20\linewidth]{image/eps/bg_mote.eps}} } \label{fig:mote} }
-\subfigure[SunSpot \newline 63.5$mm$ x 38.1$mm$ x 12.7$mm$ \newline runs with LI-ION prismatic battery] {\mbox {\raisebox{1mm} {\includegraphics[width=.30\linewidth]{image/eps/bg_sunspot.eps}} } \label{fig:sunspot} }
-\subfigure[$\mu$part \newline 20$mm$ x 17$mm$ x 7$mm$ \newline runs with one CR1632 battery.] {\mbox {\raisebox{1mm} {\includegraphics[width=.15\linewidth]{image/eps/bg_upart.eps}} } \label{fig:upart} }
-\caption{Sensor node types}
-\label{fig:sensor_nodes}
-\end{center}
-\end{figure}
 
-\subsection{Smartphones}
+\section{How to implement TF-IDF}\label{sec:bg_howto}
 
-Nowadays, Smartphone became a important device for everybody. We use it not only to contact with others but also to manage life style such as managing bank account, navigation. In the near feature, when WSN becomes popular and is used at home, Smartphone is also very useful to manage WSN such as monitoring status, adding new sensor node or modifying participating sensor node.
- 
-Start with Smartphone's flashlight, we made a survey about modern Smartphone's flashlight. To do this, we used GSMArena website \cite{gsmgarena} to collect information about all Smartphone and make Table \ref{tab:flashlight}. We can identify that, the number of Smartphone is being increased and the percent of Smartphone with flashlight also begin to increase. From 49.8\% (2010) to 60.7\% in 2012 year. We can say that flashlight is a common hardware of modern Smartphone.
 
-\begin{table}[htbp]
-\caption{Smartphone's flashlight status}
-\begin{center}
-\begin{tabular}{|c|c|c|c|}
-	\hline
-	Time (Year) 	& All 	& Smartphone with flashlight & Percentage\\
-	\hline
-	In 2010	& 223	& 252 & 49.8\%\\
-	\hline	
-	In 2011	& 445	& 252 &56.6\%\\
-	\hline	
-	In 2012		& 438	& 266 & 60.7\% \\	
-	\hline	
-\end{tabular}
-\end{center}
-\label{tab:flashlight}
-\end{table}%
-
-%\begin{figure}[htbp]
-%\begin{center}
-%\includegraphics[width=.90\linewidth]{graph/eps/present_smartphone_flashlight.eps}
-%\caption{Percent of smartphone with flashlight}
-%\label{fig:bg_percent_smartphone_flashlight}
-%\end{center}
-%\end{figure}
-
-%\begin{figure}[tb]
-%        \centering
-%        \begin{subfigure}
-%                \centering
-%                \includegraphics[width=0.2\textwidth]{image/eps/bg_sunspot.eps}
-%                \caption{Sunspot \newline 63.5$mm$ x 38.1$mm$ x 12.7$mm$}
-%                \label{fig:bg_sunspot}
-%        \end{subfigure}%
-%        ~ %add desired spacing between images, e. g. ~, \quad, \qquad etc. 
-%          %(or a blank line to force the subfigure onto a new line)
-%        \begin{subfigure}
-%                \centering
-%                \includegraphics[width=0.2\textwidth]{image/eps/bg_mote.eps}
-%                \caption{Mote \newline 58$mm$ x 32$mm$ x 7$mm$}
-%                \label{fig:bg_mote}
-%        \end{subfigure}
-%        ~ %add desired spacing between images, e. g. ~, \quad, \qquad etc. 
-%          %(or a blank line to force the subfigure onto a new line)
-%        \begin{subfigure}
-%                \centering
-%                \includegraphics[width=0.2\textwidth]{image/eps/bg_upart.eps}
-%                \caption{$\mu$part \newline 20$mm$ x 17$mm$ x 7$mm$ }
-%                \label{fig:bg_upart}
-%        \end{subfigure}
-%        \caption{Pictures of sensor node types}\label{fig:device}
-%\end{figure}
-\section{Secure protocol in WSN}
-
-Simplicio et. al. \cite{Simplicio:2010:SKM:1862461.1862545} showed that there are some secure schemes for encrypting-decrypting data in WSN. 
-
-\subsection{Network-wide keys scheme}
-
-Network-wide keys scheme is the most straightforward key distribution. In this scheme, we have a single master key, which is loaded into all sensor nodes. With this, we have a high level of efficiency and flexibility, requiring minimal memory for the storage of keys, and do not depend on the size of the network. With master key, this scheme allows adding any number of sensor nodes after the initial deployment with. Furthermore, because all of sensor nodes have the same master key, this scheme provides perfect key connectivition. 
-
-There are more papers discussing about this scheme: \emph{Broadcast Session Key Negotiation Protocol (BROSK) }\cite{BROSK}, \emph{Symmetric-Key Key Establishment (SKKE)} \cite{zigbee_secure}, \emph{Loop-Based Key Management Scheme (LBKMS)} \cite{LBKMS} and \emph{Lightweight Key Management System (LKMS)} \cite{LKMS}. 
-
-Despite the numerous advantages, the Network-Wide-Key approach has serious security vulnerabilities: an attacker can capture of a single node, this would disclose the common key, compromising all the nodes in the network and their communications.
-
-\subsection{The full pairwise scheme}
-
-In previous scheme, we only used a single key for the communication between all sensor nodes. This can provide perfect simplest key connection but it has some problems. When the master key is out, the security of the network will be destroyed. Therefore Full Pairwise scheme is proposed. This scheme adopts the extreme opposite approach. In this case, each of the $N$ nodes in the network receives $N - 1$ pairwise keys to communicate with every other node. This scheme provides higher security level, providing features such as node-to-node authentication and perfect resilience, which thwarts node replication attacks.
-
-However the main drawback of this scheme is the great memory overhead it introduces, because each node have to store many keys and many key in there may never be used.
-
-\subsection{Probabilistic approaches}
-
-Some paper \cite{Eschenauer:2002:KSD:586110.586117} \cite{ClusterKeyGrouping} are proposing probabilistic approaches. In there, each node receives a group of keys, which is called \emph{key chain}, whose size is much lower than the size of the network itself. This provides a good key connectivity and also avoid both the memory overhead in the \emph{Full Pairwise} scheme and the security risk of a single master key. In this approach, we have three distinct and sequential phases:
-
-\begin{enumerate}
-\item Key pre-distribution: the Key Distribution Center chooses each sensor node's \emph{key chain} from a large pool of keys P, These chains are then loaded into the sensor nodes prior to deployment. We usually receive a unique ID of each key in the pool, for identification.
-\item Share-key discovery: After deployment, the sensor nodes try to discover who their neighbors are and which keys they have in common. When two nodes established a shared key, we say that there is a \emph{direct link} between them.
-\item Path-key establishment: Because the key management scheme employed can't provide perfect key-connectivity with a small size \emph{key chain}, some neighboring nodes may not have keys in common. When nodes A and B need to establish a secure communication, they have to find an intermediary node C, that shares a common key with both A and B. Node C can then act as a mediator for the messages exchanged between A and B or, in order to avoid this extra communication overhead, C can create and distribute a new key to be used by A and B. Then A and B shares the new key and establish direct-link.
-%We say that, an indirect link exists between A and B.
-\end{enumerate}
-
-\subsection{Others schemes}
-
-We also have some others schemes such as \emph{Matrix-based schemes} \cite{blom}, \emph{Polynomial-based schemes} \cite{Du:2003:PKP:948109.948118}, and \emph{Combinatorial designs} \cite{ios}.
-
-All of mentioned schemes have a same feature, we need an initial information in new sensor nodes. In \emph{Network-wide keys scheme}, this is only a master key. With \emph{The full pairwise scheme} it is a key table of all sensor nodes of the network. In \emph{Probabilistic approaches}, it is a list of \emph{key chain} and in \emph{Matrix-based schemes} it is a matrix to calculate pairwise key.
-
-\section{Applications of WSN and requirements}\label{sec:bg_appli}
-
-\begin{figure}[t]
-\begin{center}
-\includegraphics[width=.80\linewidth]{image/eps/bg_smarthome.eps}
-\caption{WSN application: Smarthome system}
-\label{fig:bg_smarthome}
-\end{center}
-\end{figure}
-
-\begin{figure}[t]
-\begin{center}
-\includegraphics[width=.80\linewidth]{image/eps/bg_health.eps}
-\caption{WSN application: Wearable health monitoring system}
-\label{fig:bg_health}
-\end{center}
-\end{figure}
-
-\begin{figure}[t]
-\begin{center}
-\includegraphics[width=.80\linewidth]{image/eps/bg_childrent.eps}
-\caption{WSN application: Children supervise system}
-\label{fig:bg_children}
-\end{center}
-\end{figure}
-
-There are some applications of WSN in home environment:
-
-\begin{itemize}
-\item{Smart-home is also called home automation. It is the automation of the home, housework or home-activity. In smart-home everything are controllable not only from Smartphone but from itself. With WSN, every sensor node can communicate with sink node or other sensor nodes over wireless communication then we can put sensor nodes at anywhere at home. We can use it to collect data, control other devices, and make a smart-home (Figure \ref{fig:bg_smarthome}).}
-\item{Home security also is a application in range of smart-home. With the properties "can put sensor node anywhere" of WSN, it is very useful to monitor a large area.}
-\item{Wearable health monitoring is a application of WSN. With properties of WSN is tiny, number of devices, we can make wearable health monitoring system(Figure \ref{fig:bg_health}). The system allow an individual to closely monitor changes in patient vital signs and provide feedback to help maintain an optimal health status. If integrated in to a tele medical system, these systems can even alert medical personnel when life-threatening changes occur. In addition, patients can benefit from continuos long-term monitoring as a part of a diagnostic procedure. It can achieve optimal maintenance of a chronic condition, or can be supervised during recovery from an acute event or surgical procedure. Long-term health monitoring can capture the diurnal and circadian variation in physiological signals. These variations, for example, are a very good recovery indicator in cardiac patients after myocardial infarction. In addition, long-term monitoring can confirm adherence to treatment guidelines (e.g., regular cardiovascular exercise) or help monitor effects of drug therapy. Other patients can also benefit from these systems; for
-example, the monitors can be used during physical rehabilitation after hip or knee surgeries, stroke rehabilitation, or brain trauma rehabilitation.}
-\item{Children supervise is another application in range of WSN (Figure \ref{fig:bg_children}). Like with health monitoring, we can use WSN for monitoring health of children like raising, alarm in case of any danger or tracking position of children.}
-\end{itemize}
-
- All of home environment applications have similar requirements. Firstly, because it is applied at home environment where there is a lot of personal information, then we need data privacy, for example in security application or health monitoring application. Secondly, in the home environment, they need as simple as possible WSN, to setup, manage and use. Lastly, for regular users, the cost of the system is also important, and we need a cheap WSN for making it more popular.
- 
-\section{How to deploy a secured WSN}\label{sec:bg_howto}
-
-In previous section, we described about some applications in the home environment and requirements of it. We also described some secure protocols in range of WSN. In this section, we discuss about WSN management, how to deploy a secured WSN and modify it after that.
-
-Firstly, with data privacy requirement, we must utilize secure protocol for WSN, this is described in \cite{Simplicio:2010:SKM:1862461.1862545}\cite{BROSK} \cite{zigbee_secure}\cite{LBKMS}\cite{LKMS}\cite{Eschenauer:2002:KSD:586110.586117}\cite{ClusterKeyGrouping}\cite{blom}\cite{Du:2003:PKP:948109.948118}\cite{ios}. We use it for encrypt and decrypt data exchanged between devices to ensure that all of the data is secured. But we have a problem when we configure new sensor nodes, how to transfer WSN information (identify, secure protocol, routing) and setup it securely. In research environment, we can pre-install all of sensor nodes by connecting them with a computer and deploy. But in home environment this is difficult to use. For this reason, instead of transferring all of data, we only need to pre-install sensor nodes with a private security key and input this security key to sink node by one device such as computer, then sink node uses this key to encrypt initial data and send it to new sensor nodes over wireless communication.
-
-But, we still have a problem with private security key, especially when inputing the key of each sensor node. For security reason, all of key have to be different form each other. Security key are randomly generated with a lot of special characters and it's difficult to input by keyboard. Especially when there are a lot of sensor nodes. On the other hand, sensor nodes uses battery and sometime them is used in door, therefore we need to change battery of them or replace disabled sensor nodes with new sensor nodes then we need re-setup it more one time. Therefore we need a method that can help users configure new sensor nodes to make a secured WSN by themselves, more simply, fast and maintain secure of WSN.
-
-In the next, for reinstalling a sensor node simply, it is reseted and deployed with new information similar new sensor nodes case.
-
-\section{Communication techniques in current ICT}\label{sec:bg_technique}
-
-%Say about NFC, RFID, bluetooth, how it work? and can it applied in this case? what problem?
-As same as mentioned in section \ref{sec:bg_howto}, we have a problem with input method of security key, and to solve this we can use near communication like NFC, RFID, Bluetooth or Infrared. Which can be used to send data in small range securely without encrypt data. 
-
-{\bf Infrared\cite{infrared}}
-
-The infrared light has a short range ( $<30$ meters). Finally, the infrared technology is relatively old, consequently the infrared transceivers are cheap compared to the other technologies. The infrared transmissions should also be intense in order to not be confused with other light sources like television, window, light bulbs, etc. Considering the risk of light confusion, this communication protocol has not been retained.
-
-%\begin{itemize}
-%	\item {Advantages
-%		\begin{itemize}
-%			\item Cheap component
-%			\item Invisible
-%			\item Can exchange data with secure in short range and privacy environment.
-%		\end{itemize}
-%	}
-%	\item {Disadvantages
-%		\begin{itemize}
-%			\item Not a common hardware of nowadays personal devices.
-%			\item Has not been retained, the it is difficult to use it in nowadays sensor nodes.
-%			\item Not a common hardware of nowadays sensor node, make sensor node more expensive and wasteful.
-%		\end{itemize}
-%	}
-%\end{itemize}
-
-{\bf Bluetooth\cite{bluetooth}}
-
-Bluetooth is a short range communication technology ($< 10$ meters), but this range can easily be extended with a power booster. This communication protocol is considered as low power consumption and is not according to our requirements. It requires pair step, this also need some code then it makes some complexes to use. And it usually is not used in WSN.
-
-%\begin{itemize}
-%	\item {Advantages
-%		\begin{itemize}
-%			\item Invisible
-%			\item Can exchange data with secure in short range and privacy environment.
-%		\end{itemize}
-%	}
-%	\item {Disadvantages
-%		\begin{itemize}
-%			\item We need pair with a device before you can connect to it and exchange data.
-%			\item Not a common hardware of sensor node, make sensor node more expensive and wasteful.
-%		\end{itemize}
-%	}
-%\end{itemize}
-
-{\bf NFC\&RFID\cite{nfc}}
-
-Near field communication (NFC) is a new technique, which is a set of standards for Smartphones and similar devices to establish radio communication with each other by touching them together or bringing them into close proximity, usually no more than a few centimeters. Present and anticipated applications include contactless transactions, data exchange, and simplified setup of more complex communications such as Wi-Fi. Communication is also possible between an NFC device and an unpowered NFC chip, called a "tag". But it still do not become popular, only have some devices support it.
-
-%\begin{itemize}
-%	\item {Advantages
-%		\begin{itemize}
-%			\item Invisible
-%			\item Can exchange data with secure in short range and privacy environment.
-%		\end{itemize}
-%	}
-%	\item {Disadvantages
-%		\begin{itemize}
-%			\item Not a common hardware of sensor node, make sensor node more expensive and wasteful.
-%			\item Not a common hardware of personal devices, this make difficult to applied with nowadays devices.
-%		\end{itemize}
-%	}
-%\end{itemize}
 
 \section{Summary}\label{sec:bg_sm}
 
-In this chapter, we discuss about background of WSN, Smartphone and some applications of WSN. We also discuss about some requirements of each application and problem when deploying a secured WSN. On top of that, we discuss some communication techniques which can be used to solve inputing security key problems.
+In this chapter, we discuss about background of IF-IDF method and some applications. We also discuss about problems related to TF-IDF.
